2015-02-24  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2015-02-11  Richard Biener  <rguenther@suse.de>

	PR lto/65015
	* dwarf2out.c (gen_producer_string): Drop -fltrans-output-list
	and -fresolution.

	2015-02-13  Richard Biener  <rguenther@suse.de>

	PR lto/65015
	* dwarf2out.c (dwarf2out_finish): Use <artificial> as DW_AT_name
	for LTO produced CUs.

	2015-02-16  Richard Biener  <rguenther@suse.de>
 
	PR lto/65015
	* varasm.c (default_file_start): For LTO produced units
	emit <artificial> as file directive.

	2015-01-17  Jan Kratochvil  <jan.kratochvil@redhat.com>

        * dwarf2out.c (gen_producer_string): Ignore also OPT_fpreprocessed.

2015-02-23  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2015-02-23  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/65163
	* config/sh/sh.md (swapbsi2, related peephole2): Use const_int -65536
	instead of const_int 4294901760.

2015-02-23  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2014-11-19  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/63844
	* omp-low.c (fixup_child_record_type): Use a restrict qualified
	referece type for the receiver parameter.

	2014-11-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61634
	* tree-vect-slp.c: Include gimple-walk.h.
	(vect_detect_hybrid_slp_stmts): Rewrite to propagate hybrid
	down the SLP tree for one scalar statement.
	(vect_detect_hybrid_slp_1): New walker function.
	(vect_detect_hybrid_slp_2): Likewise.
	(vect_detect_hybrid_slp): Properly handle pattern statements
	in a pre-scan over all loop stmts.

	2015-01-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59354
	* tree-vect-slp.c (vect_build_slp_tree_1): Treat loads from
	groups larger than the slp group size as having gaps.

	2015-02-10  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/64909
	* tree-vect-loop.c (vect_estimate_min_profitable_iters): Properly
	pass a scalar-stmt count estimate to the cost model.